# CHONKNORIS

./: .gitignore  README.md  pyproject.toml
chonknoris/: __init__.py  datasets.py  gp.py  gp_custom.py  nn.py  plots.py  util.py  xkcd_colors.txt
classic_operator_learning_gp_benchmarks/FNO_TNO/: .gitignore  README.md  datasets.py  utils.py
classic_operator_learning_gp_benchmarks/FNO_TNO/configs/: FNO_Burgers_config.json  FNO_Darcy_config.json  FNO_elliptic_config.json  TNO_Burgers_config.json  TNO_Darcy_config.json  TNO_elliptic_config.json
classic_operator_learning_gp_benchmarks/FNO_TNO/models/: transformer_custom.py
classic_operator_learning_gp_benchmarks/FNO_TNO/test_plot_scripts/: 1d_test_plots.py  1d_test_plots.sh  2d_test_plots.py  2d_test_plots.sh  2d_test_plots_NS.py  paper_analysis.py
classic_operator_learning_gp_benchmarks/GP/: .gitignore  README.md  prediction.py  summarize_results.py  time_all.py  train_all_pb.py  train_pb.py
classic_operator_learning_gp_benchmarks/GP/results/: Calderon_model_params.json  (+9 more)
forward_problems/darcy_2d/: util.py
inverse_problems/Calderon/: Calderon.ipynb  DNO_Calderon_Problem_GPU_.ipynb
inverse_problems/full_waveform_inversion/: README.md  acoustic_forward_solver.py  explore.ipynb  fwi.ipynb  gauss_newton_solver.py  generate_data.py  split_train_val.py  util.py
inverse_problems/inverse_scattering/: DNO_Inverse_Scattering_Problem_Bdry_Fixed2.ipynb  choleskyOLD.py  inverse_scattering.ipynb
paper_plots/forward_problems/: forward_problems.ipynb
paper_plots/inverse_problems/: inverse_problems.ipynb
(+19 files in other folders)
